--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.18",
+        "prettier": "^3.1.0",
+        "prettier-plugin-tailwindcss": "^0.5.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
